<resources>
    <string name="app_name">EncuestaListViewPersonalizado</string>
    <string name="app_name2">Encuesta: "Comida preferida" </string>
    <string name="btnDatos"> Encuestar </string>
    <string name="btnFinal"> Guardar encuesta </string>
    <string name="btnProcesar">Procesar Resultados </string>
    <string name="DetallesEncuestados">Detalles de encuestas</string>
    <string name="txtGenero">Seleccione genero: </string>
    <string name="txtEdad">Ingrese edad: </string>
    <string name="hintEdad">edad </string>
    <string name="txtUbicacion">Ingrese Ubicacion: </string>
    <string name="hintUbicacion">Posición geografica </string>
    <string name="btnDatosPersonales">Siguiente -></string>
    <string name="tituloCategoria">Categorias de comida:</string>
    <string name="CatTipico">TIPICA SALVADOREÑA</string>
    <string name="CapMariscos">MARISCOS</string>
    <string name="CapRapida">COMIDA RAPIDA</string>
</resources>
