<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDatos"
        style="@style/TextAppearance.AppCompat.Display2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnDatos"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:onClick="onClick"
        android:background="@color/colorFondo1"
        android:textColor="@color/colorFondoLetra"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnProcesar"
        android:text="@string/btnProcesar"
        style="@style/TextAppearance.AppCompat.Display2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorFondo1"
        android:gravity="center"
        android:onClick="onClick"
        android:textColor="@color/colorFondoLetra"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnDetalles"
        android:text="@string/DetallesEncuestados"
        style="@style/TextAppearance.AppCompat.Display2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorFondo1"
        android:textColor="@color/colorFondoLetra"
        android:gravity="center"
        android:onClick="onClick"
        android:textSize="20sp" />

</LinearLayout>