<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".CategoriasComidas">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/tituloCategoria"
        android:textSize="28sp"
        android:text="@string/tituloCategoria"
        android:layout_marginBottom="12dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LaTipicos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorFondo3"
        android:onClick="onClick"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:maxWidth="60dp"
            android:maxHeight="60dp"
            app:srcCompat="@drawable/tipicos"
            tools:srcCompat="@drawable/tipicos" />

        <TextView
            android:id="@+id/RbTipico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/CatTipico"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22dp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LaMariscos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorFondo3"
        android:onClick="onClick"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:maxWidth="60dp"
            android:maxHeight="60dp"
            app:srcCompat="@drawable/mariscos"
            tools:srcCompat="@drawable/mariscos" />

        <TextView
            android:id="@+id/RbMariscos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/CapMariscos"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22dp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LaRapida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorFondo3"
        android:onClick="onClick"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:maxWidth="60dp"
            android:maxHeight="60dp"
            app:srcCompat="@drawable/rapida"
            tools:srcCompat="@drawable/rapida" />

        <TextView
            android:id="@+id/RbComidaRapida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/CapRapida"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22dp"></TextView>
    </LinearLayout>




    <!--        alme 1:15 72173 TEL: 70363754-->



</LinearLayout>